Created warehouse layer

--- a/analytics_engg_showcase_2023/dbt_project.yml
+++ b/analytics_engg_showcase_2023/dbt_project.yml
@@ -37,3 +37,7 @@ models:
       +enabled: true
       +materialized: table
       +schema: stg_sumup_dwh_23
+    warehouse:
+      +enabled: true
+      +materialized: table
+      +schema: dwh_sumup_dwh_23
