--- a/analytics_engg_showcase_2023/dbt_project.yml
+++ b/analytics_engg_showcase_2023/dbt_project.yml
@@ -41,3 +41,7 @@ models:
       +enabled: true
       +materialized: table
       +schema: dwh_sumup_dwh_23
+    reporting:
+      +enabled: true
+      +materialized: table
+      +schema: rpt_sumup_dwh_23
